contour/base/networkpolicies.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: contour
spec:
  egress:
  - {}
  ingress:
  - ports:
    - from:
      - podSelector:
          matchLabels:
            app: envoy
      port: xds
  podSelector:
    matchLabels:
      app: contour
  policyTypes:
  - Egress
  - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: contour-certgen
spec:
  egress:
  - {}
  podSelector:
    matchLabels:
      app: contour-certgen
  policyTypes:
  - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: envoy
spec:
  egress:
  - {}
  ingress:
  - ports:
    - port: http
    - port: https
  podSelector:
    matchLabels:
      app: envoy
  policyTypes:
  - Egress
  - Ingress
